src/scss/field.scss
html, body, #gui {
    width: 100%;
    height: 100%;
    margin: 0px;
}

#field-container {
    width: 100vh;
    height: 100vh;
}

#side-bar, #inspector {
    width: 100%;
    height: 100%;
    background-color: lightgrey;
    height: 100vh;
}

#side-bar {
    display: flex;
    flex-direction: column;

    button {
        height: 5vh;
        margin-left: 10px;
        margin-right: 10px;
        margin-top: 5px;
        border-radius: 10px;
        border-width: 1px;
    }

    hr {
        border: 0;
        clear:both;
        display:block;
        width: 96%;               
        background-color:black;
        height: 1px;
    }

    hr.title-sep {
        background-color: gray;        
    }

}

#tools {
    display: flex;
    flex-direction: column;

    #tools-title {
        h2 {
            text-align: center;
        }
    }

    button.tool {
        color: rgb(105, 101, 101);
    }

    button.active {
        color: black;
    }

}

#auton-select-container {
    display: flex;
    flex-direction: column;

    #auton-select-title {
        h2 {
            text-align: center;
        }
    }

    #auton-select {
        margin: 5px;
        display: flex;
        flex-direction: row;
        height: 50px;
        align-items: center;

        label {
            margin-left: 20px;
            margin-right: 10px;
            width: 100px;
            text-align: center;
        }

        input, select {
            height: 50px;
            width: 100%;
            margin-right: 5px;
        }

        .incorrect {
            color: red;
        }
    }

    button.tool {
        color: rgb(105, 101, 101);
    }

    button.active {
        color: black;
    }

}

#inspector {
    display: flex;
    overflow: scroll;

    #point-settings {
        display: flex;
        flex-direction: column;
        width: 100%;

        .setting {
            margin: 5px;
            display: flex;
            flex-direction: row;
            height: 50px;
            align-items: center;

            label {
                width: 50px;
                text-align: center;
            }

            input, select {
                height: 50px;
                width: 100px;
            }
    
            .incorrect {
                color: red;
            }
        }
    }
}

#command-container {
    display: flex;
    flex-direction: column;
    background-color: whitesmoke;
    flex-grow: 1;
    margin: 10px 20px 10px 20px;
    border: 1px solid black;

    #command-title {
        h2 {
            text-align: center;
        }
        hr {
            height: 1px;
            background-color: black;
            border: none;
        }
    }

    #commands {
        height: auto;
        flex-grow: 1;
        display: flex;
        flex-direction: column;
        align-items: center;

        .command-box {
            width: 90%;
            height: 50px;
            background-color: rgb(200, 200, 200);
            border:1px solid black;
            border-radius: 5px;
            display: flex;
            flex-direction: row;
            align-items: center;
            margin-bottom: 10px;
        }

        .command {
            display: flex;
            flex-direction: row;

            .name-container {
                width: 100%;
                display: flex;
                flex-direction: row;
                margin-left: 5px;

                input {
                    width: 70%;
                    margin-left: 3px;
                }
            }

            .remove {
                float: left;
                margin-left: auto;
                margin-right: 20px;
                height: 80%;
                aspect-ratio : 1 / 1;
                font-size: 25px;
                border-radius: 5px;
                color: maroon;
                text-align: center;
            }
        }

        .command-add {
            button {
                float: left;
                margin-left: auto;
                margin-right: 20px;
                height: 80%;
                aspect-ratio : 1 / 1;
                font-size: 30px;
                border-radius: 5px;
                text-align: center;
            }

            h3 {
                margin-left: 10px;
            }

        }
    }
}

#robot-settings {
    h2 {
        text-align: center;
    }
    .setting {
        margin: 5px;
        display: flex;
        flex-direction: row;

        .incorrect {
            color: red;
        }
    }
}

#view-settings {
    h2 {
        text-align: center;
    }
    .setting {
        margin: 5px;
        display: flex;
        flex-direction: row;
    }
}

#gui {
    display: flex;
    flex-direction: row;
}

